--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -117,6 +117,7 @@
     <ClInclude Include="src\render\ui\RacePreparationRenderer.h" />
     <ClInclude Include="src\vox\RacePreparationVox.h" />
     <ClInclude Include="src\ui\ScreenKind.h" />
+    <ClInclude Include="src\game\ScreenNavigator.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -220,6 +221,8 @@
     <ClCompile Include="src\ui\RacePreparationScreen.cpp" />
     <ClCompile Include="src\render\ui\RacePreparationRenderer.cpp" />
     <ClCompile Include="src\vox\RacePreparationVox.cpp" />
+    <ClCompile Include="src\game\ScreenNavigator.cpp" />
+    <ClCompile Include="src\vox\ScreenVox.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
