--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -50,7 +50,7 @@
     <ClInclude Include="src\render\debug\DebugBackgroundRenderer.h" />
     <ClInclude Include="src\render\common\StarsRenderer.h" />
     <ClInclude Include="src\render\effect\FadeEffect.h" />
-    <ClInclude Include="src\render\ui\MenuItemCollection.h" />
+    <ClInclude Include="src\render\ui\GraphicItemCollection.h" />
     <ClInclude Include="src\render\ui\PauseMenuRenderer.h" />
     <ClInclude Include="src\render\ui\RacePreparationRenderer.h" />
     <ClInclude Include="src\render\ui\RenderConstants.h" />
@@ -186,7 +186,7 @@
     <ClCompile Include="src\render\debug\DebugBackgroundRenderer.cpp" />
     <ClCompile Include="src\render\common\BackgroundRenderer.cpp" />
     <ClCompile Include="src\render\effect\FadeEffect.cpp" />
-    <ClCompile Include="src\render\ui\MenuItemCollection.cpp" />
+    <ClCompile Include="src\render\ui\GraphicItemCollection.cpp" />
     <ClCompile Include="src\render\ui\RacePreparationRenderer.cpp" />
     <ClCompile Include="src\render\ui\RaceRenderer.cpp" />
     <ClCompile Include="src\render\common\ShipRenderer.cpp" />
