DateTime, TimeSpan, Stopwatch

--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -39,13 +39,16 @@
     <ClInclude Include="src\input\Keyboard.h" />
     <ClInclude Include="src\lib\Assert.h" />
     <ClInclude Include="src\lib\CycledArrayIterator.h" />
+    <ClInclude Include="src\lib\DateTime.h" />
     <ClInclude Include="src\lib\Environment.h" />
     <ClInclude Include="src\lib\File.h" />
     <ClInclude Include="src\lib\NumericConverter.h" />
     <ClInclude Include="src\lib\Path.h" />
     <ClInclude Include="src\lib\Point2.h" />
     <ClInclude Include="src\calc\SinPeriodValue.h" />
+    <ClInclude Include="src\lib\Stopwatch.h" />
     <ClInclude Include="src\lib\String.h" />
+    <ClInclude Include="src\lib\TimeSpan.h" />
     <ClInclude Include="src\render\common\BackgroundSphere.h" />
     <ClInclude Include="src\render\common\MenuBackgroundRenderer.h" />
     <ClInclude Include="src\render\debug\DebugBackgroundRenderer.h" />
@@ -169,13 +172,16 @@
     <ClCompile Include="src\input\Joystick.cpp" />
     <ClCompile Include="src\input\Keyboard.cpp" />
     <ClCompile Include="src\lib\Assert.cpp" />
+    <ClCompile Include="src\lib\DateTime.cpp" />
     <ClCompile Include="src\lib\Environment.cpp" />
     <ClCompile Include="src\lib\File.cpp" />
     <ClCompile Include="src\lib\NumericConverter.cpp" />
     <ClCompile Include="src\lib\Path.cpp" />
     <ClCompile Include="src\lib\Point2.cpp" />
     <ClCompile Include="src\calc\SinPeriodValue.cpp" />
+    <ClCompile Include="src\lib\Stopwatch.cpp" />
     <ClCompile Include="src\lib\String.cpp" />
+    <ClCompile Include="src\lib\TimeSpan.cpp" />
     <ClCompile Include="src\model\track\LoopTrack.cpp" />
     <ClCompile Include="src\model\VelocityFunction.cpp" />
     <ClCompile Include="src\core\PositionUpdater.cpp" />
