--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -123,6 +123,7 @@
     <ClInclude Include="src\lib\Stopwatch.h" />
     <ClInclude Include="src\lib\DateTime.h" />
     <ClInclude Include="src\gl\TextRenderer.h" />
+    <ClInclude Include="src\core\LapTimer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -233,6 +234,7 @@
     <ClCompile Include="src\lib\Stopwatch.cpp" />
     <ClCompile Include="src\lib\DateTime.cpp" />
     <ClCompile Include="src\gl\TextRenderer.cpp" />
+    <ClCompile Include="src\core\LapTimer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
