race start countdown

--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -52,6 +52,7 @@
     <ClInclude Include="src\lib\String.h" />
     <ClInclude Include="src\lib\TimeSpan.h" />
     <ClInclude Include="src\render\common\BackgroundSphere.h" />
+    <ClInclude Include="src\render\common\CountdownRenderer.h" />
     <ClInclude Include="src\render\common\DashboardRenderer.h" />
     <ClInclude Include="src\render\common\LapsCountRenderer.h" />
     <ClInclude Include="src\render\common\LapTimeRenderer.h" />
@@ -198,6 +199,7 @@
     <ClCompile Include="src\model\track\RoadTrack1.cpp" />
     <ClCompile Include="src\model\track\WheelTrack.cpp" />
     <ClCompile Include="src\render\common\BackgroundSphere.cpp" />
+    <ClCompile Include="src\render\common\CountdownRenderer.cpp" />
     <ClCompile Include="src\render\common\DashboardRenderer.cpp" />
     <ClCompile Include="src\render\common\LapsCountRenderer.cpp" />
     <ClCompile Include="src\render\common\LapTimeRenderer.cpp" />
