--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -48,7 +48,7 @@
     <ClInclude Include="src\model\ShipCentralLine.h" />
     <ClInclude Include="src\model\VelocityFunction.h" />
     <ClInclude Include="src\core\PositionUpdater.h" />
-    <ClInclude Include="src\core\LapCounter.h" />
+    <ClInclude Include="src\core\LapChecker.h" />
     <ClInclude Include="src\model\track\WheelTrack.h" />
     <ClInclude Include="src\render\ui\ScreenRenderer.h" />
     <ClInclude Include="src\render\ui\RaceRenderer.h" />
@@ -173,7 +173,7 @@
     <ClCompile Include="src\model\track\LoopTrack.cpp" />
     <ClCompile Include="src\model\VelocityFunction.cpp" />
     <ClCompile Include="src\core\PositionUpdater.cpp" />
-    <ClCompile Include="src\core\LapCounter.cpp" />
+    <ClCompile Include="src\core\LapChecker.cpp" />
     <ClCompile Include="src\model\track\WheelTrack.cpp" />
     <ClCompile Include="src\render\ui\RaceRenderer.cpp" />
     <ClCompile Include="src\render\common\ShipRenderer.cpp" />
