--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -130,6 +130,7 @@
     <ClInclude Include="src\render\common\LapsCountRenderer.h" />
     <ClInclude Include="src\render\common\CountdownRenderer.h" />
     <ClInclude Include="src\render\common\GoRenderer.h" />
+    <ClInclude Include="src\render\common\CompleteLapTimeRenderer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -247,6 +248,7 @@
     <ClCompile Include="src\render\common\LapsCountRenderer.cpp" />
     <ClCompile Include="src\render\common\CountdownRenderer.cpp" />
     <ClCompile Include="src\render\common\GoRenderer.cpp" />
+    <ClCompile Include="src\render\common\CompleteLapTimeRenderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
