--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -137,7 +137,7 @@
     <ClInclude Include="src\lib\Random.h" />
     <ClInclude Include="src\calc\Vector3.h" />
     <ClInclude Include="src\model\ShipMeasure.h" />
-    <ClInclude Include="src\model\track\WheelTrack.h" />
+    <ClInclude Include="src\model\track\RoadTrack2.h" />
     <ClInclude Include="src\render\common\BackgroundRenderer.h" />
     <ClInclude Include="src\render\ui\RaceRenderer.h" />
     <ClInclude Include="src\render\common\ShipRenderer.h" />
@@ -200,7 +200,7 @@
     <ClCompile Include="src\gl\opengl.cpp" />
     <ClCompile Include="src\model\Border.cpp" />
     <ClCompile Include="src\model\track\RoadTrack1.cpp" />
-    <ClCompile Include="src\model\track\WheelTrack.cpp" />
+    <ClCompile Include="src\model\track\RoadTrack2.cpp" />
     <ClCompile Include="src\render\common\BackgroundSphere.cpp" />
     <ClCompile Include="src\render\common\CompleteLapsTimeListRenderer.cpp" />
     <ClCompile Include="src\render\common\CompleteLapTimeRenderer.cpp" />
