--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -22,7 +22,7 @@
     <ClInclude Include="src\calc\Geometry.h" />
     <ClInclude Include="src\calc\Physics.h" />
     <ClInclude Include="src\calc\VectorCalculator.h" />
-    <ClInclude Include="src\model\track\CircleTrack.h" />
+    <ClInclude Include="src\model\track\RoadTrack3.h" />
     <ClInclude Include="src\lib\Numeric.h" />
     <ClInclude Include="src\core\TurnAngleCalculator.h" />
     <ClInclude Include="src\core\PositionCorrector.h" />
@@ -153,7 +153,7 @@
     <ClCompile Include="src\calc\Geometry.cpp" />
     <ClCompile Include="src\calc\Physics.cpp" />
     <ClCompile Include="src\calc\VectorCalculator.cpp" />
-    <ClCompile Include="src\model\track\CircleTrack.cpp" />
+    <ClCompile Include="src\model\track\RoadTrack3.cpp" />
     <ClCompile Include="src\lib\Numeric.cpp" />
     <ClCompile Include="src\core\TurnAngleCalculator.cpp" />
     <ClCompile Include="src\core\PositionCorrector.cpp" />
