--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -73,6 +73,7 @@
     <ClInclude Include="src\render\ui\SelectedItemColor.h" />
     <ClInclude Include="src\render\ui\StartMenuRenderer.h" />
     <ClInclude Include="src\render\ui\TrackSelectorRenderer.h" />
+    <ClInclude Include="src\ui\GridMenuItemSelector.h" />
     <ClInclude Include="src\ui\MenuItemSelector.h" />
     <ClInclude Include="src\ui\RacePreparationScreen.h" />
     <ClInclude Include="src\ui\RaceScreen.h" />
