--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -61,6 +61,7 @@
     <ClInclude Include="src\render\common\LapTimeRenderer.h" />
     <ClInclude Include="src\render\common\MenuBackgroundRenderer.h" />
     <ClInclude Include="src\gl\TextRenderer.h" />
+    <ClInclude Include="src\render\common\TrackThumbnailGridRenderer.h" />
     <ClInclude Include="src\render\common\TrackThumbnailRenderer.h" />
     <ClInclude Include="src\render\debug\DebugBackgroundRenderer.h" />
     <ClInclude Include="src\render\common\StarsRenderer.h" />
@@ -214,6 +215,7 @@
     <ClCompile Include="src\render\common\LapTimeRenderer.cpp" />
     <ClCompile Include="src\render\common\MenuBackgroundRenderer.cpp" />
     <ClCompile Include="src\gl\TextRenderer.cpp" />
+    <ClCompile Include="src\render\common\TrackThumbnailGridRenderer.cpp" />
     <ClCompile Include="src\render\common\TrackThumbnailRenderer.cpp" />
     <ClCompile Include="src\render\debug\DebugBackgroundRenderer.cpp" />
     <ClCompile Include="src\render\common\BackgroundRenderer.cpp" />
