--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -135,6 +135,7 @@
     <ClInclude Include="src\ui\MenuItemSelector.h" />
     <ClInclude Include="src\ui\GridMenuItemSelector.h" />
     <ClInclude Include="src\render\common\TrackThumbnailRenderer.h" />
+    <ClInclude Include="src\render\common\TrackThumbnailGridRenderer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -255,6 +256,7 @@
     <ClCompile Include="src\render\common\CompleteLapTimeRenderer.cpp" />
     <ClCompile Include="src\render\common\CompleteLapsTimeListRenderer.cpp" />
     <ClCompile Include="src\render\common\TrackThumbnailRenderer.cpp" />
+    <ClCompile Include="src\render\common\TrackThumbnailGridRenderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
