--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -137,8 +137,11 @@
     <ClInclude Include="src\render\common\TrackThumbnailRenderer.h" />
     <ClInclude Include="src\render\common\TrackThumbnailGridRenderer.h" />
     <ClInclude Include="src\lib\CycledListIterator.h" />
-    <ClInclude Include="src\render\common\FinishRenderer.h" />
+    <ClInclude Include="src\render\common\FinishTextRenderer.h" />
     <ClInclude Include="src\core\RaceState.h" />
+    <ClInclude Include="src\ui\FinishScreen.h" />
+    <ClInclude Include="src\render\ui\FinishRenderer.h" />
+    <ClInclude Include="src\vox\FinishVox.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -260,7 +263,10 @@
     <ClCompile Include="src\render\common\CompleteLapsTimeListRenderer.cpp" />
     <ClCompile Include="src\render\common\TrackThumbnailRenderer.cpp" />
     <ClCompile Include="src\render\common\TrackThumbnailGridRenderer.cpp" />
-    <ClCompile Include="src\render\common\FinishRenderer.cpp" />
+    <ClCompile Include="src\render\common\FinishTextRenderer.cpp" />
+    <ClCompile Include="src\ui\FinishScreen.cpp" />
+    <ClCompile Include="src\render\ui\FinishRenderer.cpp" />
+    <ClCompile Include="src\vox\FinishVox.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
