IArray, collections refactoring

--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -45,10 +45,10 @@
     <ClInclude Include="src\input\Keyboard.h" />
     <ClInclude Include="src\lib\Assert.h" />
     <ClInclude Include="src\lib\CycledArrayIterator.h" />
-    <ClInclude Include="src\lib\CycledListIterator.h" />
     <ClInclude Include="src\lib\DateTime.h" />
     <ClInclude Include="src\lib\Environment.h" />
     <ClInclude Include="src\lib\File.h" />
+    <ClInclude Include="src\lib\IArray.h" />
     <ClInclude Include="src\lib\NumericConverter.h" />
     <ClInclude Include="src\lib\Path.h" />
     <ClInclude Include="src\lib\Point2.h" />
