--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -136,7 +136,6 @@
     <ClInclude Include="src\ui\GridMenuItemSelector.h" />
     <ClInclude Include="src\render\common\TrackThumbnailRenderer.h" />
     <ClInclude Include="src\render\common\TrackThumbnailGridRenderer.h" />
-    <ClInclude Include="src\lib\CycledListIterator.h" />
     <ClInclude Include="src\render\common\FinishTextRenderer.h" />
     <ClInclude Include="src\core\RaceState.h" />
     <ClInclude Include="src\ui\FinishScreen.h" />
@@ -145,6 +144,7 @@
     <ClInclude Include="src\ai\ObstacleAvoidanceLogic.h" />
     <ClInclude Include="src\ai\SteeringLogic.h" />
     <ClInclude Include="src\ai\EnemyAI.h" />
+    <ClInclude Include="src\lib\IArray.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
