--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -37,6 +37,7 @@
     <ClInclude Include="src\gl\ImageFile.h" />
     <ClInclude Include="src\gl\Mesh.h" />
     <ClInclude Include="src\gl\MeshLoader.h" />
+    <ClInclude Include="src\gl\SimpleMeshRenderer.h" />
     <ClInclude Include="src\gl\Texture.h" />
     <ClInclude Include="src\anx\GraphicResources.h" />
     <ClInclude Include="src\gl\TexturedRect.h" />
@@ -194,6 +195,7 @@
     <ClCompile Include="src\gl\ImageFile.cpp" />
     <ClCompile Include="src\gl\Mesh.cpp" />
     <ClCompile Include="src\gl\MeshLoader.cpp" />
+    <ClCompile Include="src\gl\SimpleMeshRenderer.cpp" />
     <ClCompile Include="src\gl\Texture.cpp" />
     <ClCompile Include="src\anx\GraphicResources.cpp" />
     <ClCompile Include="src\gl\TexturedRect.cpp" />
