--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -31,6 +31,7 @@
     <ClInclude Include="src\core\LapTimer.h" />
     <ClInclude Include="src\core\Race.h" />
     <ClInclude Include="src\core\RaceState.h" />
+    <ClInclude Include="src\core\ShipCollisionDetector.h" />
     <ClInclude Include="src\core\TrackManager.h" />
     <ClInclude Include="src\game\ScreenNavigator.h" />
     <ClInclude Include="src\gl\Face.h" />
@@ -184,6 +185,7 @@
     <ClCompile Include="src\core\Laps.cpp" />
     <ClCompile Include="src\core\LapTimer.cpp" />
     <ClCompile Include="src\core\Race.cpp" />
+    <ClCompile Include="src\core\ShipCollisionDetector.cpp" />
     <ClCompile Include="src\core\ShipController.cpp" />
     <ClCompile Include="src\game\Game.cpp" />
     <ClCompile Include="src\core\Camera.cpp" />
