--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -218,6 +218,7 @@
     <ClCompile Include="src\lib\Stopwatch.cpp" />
     <ClCompile Include="src\lib\String.cpp" />
     <ClCompile Include="src\lib\TimeSpan.cpp" />
+    <ClCompile Include="src\model\ShipCentralLine.cpp" />
     <ClCompile Include="src\model\track\RoadTrack4.cpp" />
     <ClCompile Include="src\model\VelocityFunction.cpp" />
     <ClCompile Include="src\core\PositionUpdater.cpp" />
