--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -60,6 +60,7 @@
     <ClInclude Include="src\lib\Stopwatch.h" />
     <ClInclude Include="src\lib\String.h" />
     <ClInclude Include="src\lib\TimeSpan.h" />
+    <ClInclude Include="src\model\ShipAIData.h" />
     <ClInclude Include="src\render\common\BackgroundSphere.h" />
     <ClInclude Include="src\render\common\CompleteLapsTimeListRenderer.h" />
     <ClInclude Include="src\render\common\CompleteLapTimeRenderer.h" />
@@ -218,6 +219,7 @@
     <ClCompile Include="src\lib\Stopwatch.cpp" />
     <ClCompile Include="src\lib\String.cpp" />
     <ClCompile Include="src\lib\TimeSpan.cpp" />
+    <ClCompile Include="src\model\ShipAIData.cpp" />
     <ClCompile Include="src\model\ShipCentralLine.cpp" />
     <ClCompile Include="src\model\track\RoadTrack4.cpp" />
     <ClCompile Include="src\model\VelocityFunction.cpp" />
