--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -33,6 +33,7 @@
     <ClInclude Include="src\core\RaceState.h" />
     <ClInclude Include="src\core\ShipCollisionDetector.h" />
     <ClInclude Include="src\core\ShipCollisionResult.h" />
+    <ClInclude Include="src\core\StartingGridInitializer.h" />
     <ClInclude Include="src\core\TrackManager.h" />
     <ClInclude Include="src\game\ScreenNavigator.h" />
     <ClInclude Include="src\gl\Face.h" />
@@ -190,6 +191,7 @@
     <ClCompile Include="src\core\ShipCollisionDetector.cpp" />
     <ClCompile Include="src\core\ShipCollisionResult.cpp" />
     <ClCompile Include="src\core\ShipController.cpp" />
+    <ClCompile Include="src\core\StartingGridInitializer.cpp" />
     <ClCompile Include="src\game\Game.cpp" />
     <ClCompile Include="src\core\Camera.cpp" />
     <ClCompile Include="src\core\LapChecker.cpp" />
