--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -150,6 +150,7 @@
     <ClInclude Include="src\core\ShipCollisionDetector.h" />
     <ClInclude Include="src\core\ShipCollisionResult.h" />
     <ClInclude Include="src\model\ShipAIData.h" />
+    <ClInclude Include="src\core\StartingGridInitializer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -284,6 +285,7 @@
     <ClCompile Include="src\core\ShipCollisionResult.cpp" />
     <ClCompile Include="src\model\ShipAIData.cpp" />
     <ClCompile Include="src\model\ShipCentralLine.cpp" />
+    <ClCompile Include="src\core\StartingGridInitializer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
