--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -61,7 +61,10 @@
     <ClInclude Include="src\lib\Stopwatch.h" />
     <ClInclude Include="src\lib\String.h" />
     <ClInclude Include="src\lib\TimeSpan.h" />
+    <ClInclude Include="src\model\Bullet.h" />
+    <ClInclude Include="src\model\Machinegun.h" />
     <ClInclude Include="src\model\ShipAIData.h" />
+    <ClInclude Include="src\model\Weapon.h" />
     <ClInclude Include="src\render\common\BackgroundSphere.h" />
     <ClInclude Include="src\render\common\CompleteLapsTimeListRenderer.h" />
     <ClInclude Include="src\render\common\CompleteLapTimeRenderer.h" />
@@ -221,6 +224,8 @@
     <ClCompile Include="src\lib\Stopwatch.cpp" />
     <ClCompile Include="src\lib\String.cpp" />
     <ClCompile Include="src\lib\TimeSpan.cpp" />
+    <ClCompile Include="src\model\Bullet.cpp" />
+    <ClCompile Include="src\model\Machinegun.cpp" />
     <ClCompile Include="src\model\ShipAIData.cpp" />
     <ClCompile Include="src\model\ShipCentralLine.cpp" />
     <ClCompile Include="src\model\track\RoadTrack4.cpp" />
@@ -230,6 +235,7 @@
     <ClCompile Include="src\model\Border.cpp" />
     <ClCompile Include="src\model\track\RoadTrack1.cpp" />
     <ClCompile Include="src\model\track\RoadTrack2.cpp" />
+    <ClCompile Include="src\model\Weapon.cpp" />
     <ClCompile Include="src\render\common\BackgroundSphere.cpp" />
     <ClCompile Include="src\render\common\CompleteLapsTimeListRenderer.cpp" />
     <ClCompile Include="src\render\common\CompleteLapTimeRenderer.cpp" />
